- variables for Whetstone / lib-themer - quest min height - header w/ buttons - fix for overflow for dark eye - fix hit box for quest log

--- a/styles/global-mixin.scss
+++ b/styles/global-mixin.scss
@@ -81,3 +81,8 @@
     url('../fonts/nova-square-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 }
+
+@mixin header-buttons {
+  display: flex;
+  border-bottom: 2px solid $primary-color-header-buttons;
+}
