--- a/styles/quest-preview.scss
+++ b/styles/quest-preview.scss
@@ -263,7 +263,8 @@
         }
 
         header {
-          border-bottom: 2px solid #782e22;
+          @include header-buttons;
+          //border-bottom: 2px solid #782e22;
           margin-bottom: 4px;
           flex: 0 0 1px;
         }
@@ -608,12 +609,11 @@
         overflow: hidden;
 
         header {
-          display: flex;
+          @include header-buttons;
           justify-content: space-between;
           margin-top: 0;
           padding-top: 0;
           margin-bottom: 4px;
-          border-bottom: 2px solid #782e22;
         }
 
         h2 {
